<resources>
    <string name="app_name">Project</string>
    <string name="premier_league">Premier League</string>
    <string name="la_liga">La Liga</string>
    <string name="french_ligue_1">French Ligue 1</string>
    <string name="serie_a">Serie A</string>
    <string name="search">Search</string>
    <string name="Add">+</string>
    <string name="add_a_team">Add a Team</string>
    <string name="team_name">Team Name: </string>
    <string name="search_a_team">Search a Team</string>
    <string name="owner">Owner:</string>
    <string name="michael">Michael</string>
    <string name="brossard_park">Brossard Park</string>
    <string name="_2_00_pm">2:00 pm</string>
    <string name="time">Time:</string>
    <string name="submit">Submit</string>
    <string name="Team1">Team 1</string>
    <string name="Team2">Team 2</string>
    <string name="vs">vs</string>
    <string name="db_drop">DROP TABLE IF EXISTS</string>
    <string name="league">League</string>
    <string name="icon">icon</string>
    <string name="date">Date</string>
    <string-array name="league">
        <item>PREMIER LEAGUE</item>
        <item>LA LIGA</item>
        <item>FRENCH LIGUE 1</item>
        <item>SERIE A</item>
        <item>Champions League</item>
    </string-array>


    <string name="ui_tabname_Matches">Matches </string>
    <string name="ui_tabname_AddATeam">Add Team</string>
    <string name="ui_tabname_ModifyATeam">Modify Team</string>
    <string name="ui_tabname_Search">Search</string>

    <string name="ui_tabname_help">Help</string>
    <string name="ui_tabname_about">About</string>
    <string name="ui_tabname_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">location</string>
    <string name="opponent_team">Opponent Team</string>
    <string name="manchester_city">Manchester City</string>
    <string name="remove_match">Remove Match</string>
    <string name="update_match">Update Match</string>
</resources>
