<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardId"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black">

            <TextView
                android:id="@+id/Team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="50dp"
                android:textColor="@android:color/white"
                android:text="@string/Team1"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/vs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="42dp"
                android:layout_marginStart="190dp"
                android:textColor="@android:color/white"
                android:text="@string/vs"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/AgainstTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                android:text="@string/Team2"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/datelog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/time"
                android:textSize="15sp" />



            <TextView
                android:id="@+id/league"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vs"
                android:text="@string/league"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher_foreground" />

            <Button
                android:id="@+id/updateBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@android:color/holo_green_dark"
                android:text="@string/update_match"
                android:layout_marginBottom="5dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/removeBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@android:color/holo_red_dark"
                android:text="@string/remove_match"
                android:layout_marginBottom="5dp"
                android:textSize="15sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>