<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".MatchDetails">

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/soccer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:foreground="@drawable/football"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/icon" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:layout_marginTop="100dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/soccer">
    <TextView
        android:id="@+id/Team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/white"
        android:text="@string/Team1"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:text="@string/vs"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/AgainstTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:text="@string/Team2"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

        <TextView
            android:id="@+id/timelog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/time"
            android:textSize="18sp"
            android:layout_below="@+id/vs"
            />

        <TextView
        android:id="@+id/datelog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@+id/timelog"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/date"
        android:textSize="22sp" />



    <TextView
        android:id="@+id/league"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/league"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location"
            android:layout_below="@+id/datelog"/>

    </RelativeLayout>

</RelativeLayout>